--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,5 @@
     <string name="question7_choice3">Greater than 12 months</string>
 
     <string name="question8">8. What is the percentage of return you are expecting?</string>
+    <string name="error_valid_email_password">The password and account number combination is not valid</string>
 </resources>
