--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="new_pass">New Password</string>
     <string name="title_activity_profile">TCS</string>
     <string name="title_activity_login">Sign in</string>
+    <string name="title_activity_choice">Choose</string>
     <string name="hint_email">Email</string>
     <string name="hint_password">Password</string>
     <string name="hint_name">Fullname</string>
