Portfolio section is done.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,4 +70,7 @@
     <string name="navigation_drawer_close">close drawer</string>
     <string name="navigation_drawer_open">open</string>
     <string name="title_activity_offers">offers</string>
+    <string name="title_activity_portfolio">Portfolio</string>
+    <string name="action_settings">Settings</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 </resources>
